centered and focus

--- a/restaurant.html
+++ b/restaurant.html
@@ -33,8 +33,9 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container" role="application" aria-hidden="true" tabindex="-1">
-      <div id="map"></div>
+    <a class="skip-main" href="#filter-options">Skip to main content</a>
+    <section id="map-container" aria-hidden="true">
+      <div id="map" role="application" tabindex="-1"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
@@ -43,7 +44,7 @@
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address" tabindex="0"></p>
-      <table id="restaurant-hours" tabindex="0"></table>
+        <table id="restaurant-hours" tabindex="0"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
