--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 
 <body>
   <header>
-    <nav>
+    <nav  tabindex="0">
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
-
   <main id="main-content">
-    <section id="map-container" role="application" aria-hidden="true" tabindex="-1">
-      <div id="map"></div>
+    <a class="skip-main" href="#filter-options" tabindex="1">Skip to main content</a>
+
+    <section id="map-container" aria-hidden="true">
+      <div id="map" role="application" tabindex="-1"></div>
     </section>
     <section>
-      <div class="filter-options" tabindex="1">
+      <div class="filter-options" id="filter-options">
         <div align="center">
           <div class="select_label" aria-labelledby="neighborhoods-select" tabindex="2">Select neighborhood</div>
           <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="select">
@@ -35,7 +36,7 @@
         </div>
 
       </div>
-      <ul id="restaurants-list" role="listbox"></ul>
+        <ul tabindex="4" id="restaurants-list" role="listbox"></ul>
     </section>
   </main>
 
